--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_profile">Profile</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="map_fragment_label">Events around you</string>
+    <string name="jacketcoach_logo_description">JacketCoach Logo</string>
+    <string name="jacketcoach">JacketCoach</string>
 </resources>
