--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="map_fragment_label">Events around you</string>
     <string name="jacketcoach_logo_description">JacketCoach Logo</string>
     <string name="jacketcoach">JacketCoach</string>
+    <string name="action_favorite">Favorite events</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
 </resources>
