--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="firebase_event_players_key">players</string>
     <string name="TAG_PLAYER">0</string>
     <string name="TAG_LAYOUT">1</string>
+    <string name="monitoring_noPlayerRegistered">No player registered yet</string>
 </resources>
