--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     </string-array>
     <string name="view_more_eventInfo">View more</string>
     <string name="extra_eventToMonitor">EVENT_MONITORED</string>
+    <string name="event_description">Event Description</string>
 </resources>
