Address info implemented on EventMonitor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="view_more_eventInfo">View more</string>
     <string name="extra_eventToMonitor">EVENT_MONITORED</string>
     <string name="event_description">Event Description</string>
+    <string name="event_address_label">Address</string>
 </resources>
